nginx.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-demo-deployment
  namespace: nginx-demo
  labels:
    app: nginx-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-demo
  template:
    metadata:
      labels:
        app: nginx-demo
    spec:
      containers:
      - name: nginx-demo
        image: nginx
        ports:
        - containerPort: 80
