nginx.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-demo-http
  namespace: nginx-demo
spec:
  type: LoadBalancer
  selector:
    app: nginx-demo
  ports:
  - name: nginx-demo-http
    protocol: TCP
    port: 80
    targetPort: 80
