nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  namespace: nginx-demo
spec:
  ingressClassName: nginx
  rules:
    - host: nginx-demo.diagon.cloud
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: nginx-demo-http
                port:
                  number: 80
            path: /
  tls:
  - hosts:
    - nginx-demo.diagon.cloud
    secretName: nginx-demo-tls
